fix: harden WebRenderer escaping and switch to Logger